<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.naturesample.LearnFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:fontFamily="casual"
            android:text="@string/Le"
            android:textAllCaps="false"
            android:textColor="#00BCD4"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/paris"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/pr"
                    android:textColor="#9C27B0"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/eiffelimage"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/eiffel" />

                <TextView
                    android:id="@+id/paris_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/paris"
                    android:textColor="#9C27B0"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/bora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/br"
                    android:textColor="#4CAF50"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/bora2"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/borabora" />

                <TextView
                    android:id="@+id/bora_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/BoraBora"
                    android:textColor="#4CAF50"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/bali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/bl"
                    android:textColor="#E91E63"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageBali"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/bali" />

                <TextView
                    android:id="@+id/bali_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/Bali"
                    android:textColor="#E91E63"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/italy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/It"
                    android:textColor="#3F51B5"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageItaly"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/italy" />

                <TextView
                    android:id="@+id/italy_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/Italy"
                    android:textColor="#3F51B5"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/kenya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/Ke"
                    android:textColor="#FF9800"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageKenya"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/kenyaa" />

                <TextView
                    android:id="@+id/kenya_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/Kenya"
                    android:textColor="#FF9800"
                    android:textSize="14sp" />
                <Button
                    android:id="@+id/quizButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doq"
                    android:textSize="@dimen/button_text_size"
                    android:padding="@dimen/button_padding"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>