<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DashboardFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/pple_image"
            app:srcCompat="@drawable/imagetravel" />

        <TextView
            android:id="@+id/image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/Nature"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <GridLayout
        android:id="@+id/grid"
        android:background="@drawable/background_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:rowCount="2"
        android:padding="10dp"
        android:columnCount="2">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardLearn"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/tourist"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/tourist"
                    app:srcCompat="@drawable/tourist"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn"
                    android:layout_below="@id/tourist"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="20dp"/>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardQuiz"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >
                <ImageView
                    android:id="@+id/quiz"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/tg"
                    app:srcCompat="@drawable/quiz"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz"
                    android:layout_below="@id/quiz"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardFaqs"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/faq"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/faqs"
                    app:srcCompat="@drawable/faq" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faq"
                    android:layout_below="@id/faq"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"/>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMore"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/more"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/mr"
                    app:srcCompat="@drawable/more" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:layout_below="@id/more"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="20dp"/>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>


</LinearLayout>
</layout>